--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -7,26 +7,40 @@
     <!-- 1st Content box -->
     <div class="row py-2 pb-5 m-0">
         <div class="col-12 m-0">
-            <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+            <div class="p-0 m-0" >
 
-                <div style="padding-bottom: 45px;"> <!-- Padding for <div> child <a> tag because of style="float: right"-->
+                <div class="pb-4"> <!-- Padding for <div> child <a> tag because of style="float: right"-->
+                    <div class="row text-center p-3">
+                        <div class="col">
+                            <h2 class="mx-auto p-3" >Software Engineer (SWE) Career Guide</h2>
+                        </div>
+                        
+                    </div>
+                    <div class="row">
+                        <div class="col-4 d-flex align-items-center justify-content-center" style="position: relative;">
+                            <img src="/static/img/home-pg-ed-thin.webp" alt="Illustration of a stylized, circular educational theme with vibrant gradient colors. In the foreground, a male figure is seated at a desk reading a book, symbolizing a student. Above him is a large graduation cap, hinting at the goal of education. The background features an abstract cityscape with skyscrapers, a flying airplane, and various educational icons such as a diploma, suggesting the broader horizons and opportunities education can open up. A briefcase sits to the right of the student, representing the professional aspirations that education can help achieve." width="155" style="position: absolute; left: 0px;" >
+                        </div>
+                        
+                        <div class="col p-4" style="border-radius: 10px; border: 1px solid #ededed26; background: linear-gradient(169deg, rgba(255, 255, 255, 0.2) 8.61%, rgba(255, 255, 255, 0.1) 76.57%);">
+                            
+                            <p>
+                                <b>1.</b> Obtain a certification from your local community college in one of the following areas:
+                                Front End Web Development (FEW)
+                                Back End Web Development (BEW)...
+                            </p>
+                            
+                            <p> 
+                                <b>2.</b> Dedicate time to prepare for technical interviews by utilizing resources such as Structy, Algo Expert, and mastering problem-solving techniques as presented in "Cracking the Coding Interview..."
+                            </p>   
+                            <p>
+                                <b>3.</b> Seek assistance in job placement through programs like...
+                            </p>
+                            <p class="p-3"><i>With these steps accomplished, you'll be well-prepared to pursue your desired Software Engineer position.</i></p>
+                            <a href="/swe_career_guide" type="button" class="btn btn-outline-dark" style="float: right;">Guide</a>
+                        </div>
 
-                    <h3>Pursue a career as a Software Engineer (SWE)</h3>
-                    <p>
-                        1. Obtain a certification from your local community college in one of the following areas:
-                        Front End Web Development (FEW)
-                        Back End Web Development (BEW)...
-                    </p>
-                    
-                    <p> 
-                        2. Dedicate time to prepare for technical interviews by utilizing resources such as Structy, Algo Expert, and mastering problem-solving techniques as presented in "Cracking the Coding Interview..."
-                    </p>   
-                    <p>
-                        3. Seek assistance in job placement through programs like...
-                    </p>
-                    <p class="p-3"><i>With these steps accomplished, you'll be well-prepared to pursue your desired Software Engineer position.</i></p>
-                    <a href="/swe_career_guide" type="button" class="btn btn-outline-dark" style="float: right;">Comprehensive Step-by-Step Guide</a>
-
+                        
+                    </div>
                 </div>
 
             </div>
@@ -34,24 +48,41 @@
     </div>
 
     <!-- 2nd Content box -->
-    <div class="row py-2 pb-5 m-0">
+    <div class="row p-0 pb-2 pb-5 m-0">
         <div class="col-12 m-0"> 
-            <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+            <div class="p-0 m-0">
 
                 <div style="padding-bottom: 45px;"> <!-- Padding for <div> child <a> tag because of style="float: right"-->
 
-                    <h3>Solutions to Coding Challenges</h3>
-                    <p>
-                        Are you facing challenges when attempting to solve a coding problem?
-                    </p>
-                    
-                    <p> 
-                        Explore available solutions for the given challenge from platforms such as LeetCode, HackerRank, or Project Euler. 
-                    </p>   
-                    <p>
-                        Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
-                    </p>
-                    <a href="/search_solutions/None/0" type="button" class="btn btn-outline-dark" style="float: right;">Search now</a>
+                    <div class="row text-center p-3" style="margin-bottom: 20px;">
+                        <div class="col">
+                            <h2 class="mx-auto p-3" >Solutions to Coding Challenges</h2>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        
+                        <div class="col p-4" style="border-radius: 10px; border: 1px solid #ededed26; background: linear-gradient(169deg, rgba(255, 255, 255, 0.2) 8.61%, rgba(255, 255, 255, 0.1) 76.57%);">
+                            
+                            <p>
+                                Are you facing challenges when attempting to solve a coding problem?
+                            </p>
+                            
+                            <p> 
+                                Explore available solutions for the given challenge from platforms such as LeetCode, HackerRank, or Project Euler. 
+                            </p>   
+                            <p>
+                                Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
+                            </p>
+                            <a href="/search_solutions/None/0" type="button" class="btn btn-outline-dark" style="float: right;">Search now</a>
+                        </div>
+
+                        <div class="col-4 d-flex align-items-center justify-content-center" style="position: relative;">
+                            <img src="/static/img/coding-challenge.webp" alt="This image illustrates the concept of knowledge and innovation in the digital era. The central element is a glowing lightbulb, symbolizing a bright idea or inspiration. This lightbulb is placed above a laptop, which has lines of colorful code displayed on its screen, indicating programming or software development. The laptop is set on an open book with blue, glowing pages, suggesting that the foundation of these modern technologies is deeply rooted in traditional knowledge and learning. The background is dark with circuit-like patterns and bright nodes, possibly representing a network or digital connections. The overall theme merges the traditional symbol of knowledge—a book—with modern technology, portraying the evolution of learning and innovation." width="165" style="position: absolute; right: 0px;">
+                        </div>
+                    </div>
+
+                   
 
                 </div>
 
