--- a/templates/base.html
+++ b/templates/base.html
@@ -129,7 +129,7 @@
                             <div class="col-6 m-0">
                                 <a 
                                     class="nav-link nav-bar-page-link" 
-                                    href="/swe_career_guide"
+                                    href="/swe_career_guide/Education/Getting_Started"
                                 >SWE Career Guide</a>
                             </div>
 
@@ -163,7 +163,7 @@
                         </li>
                         <li class="px-2 m-0"><hr class="p-0 m-0" style="color: #CDCCCC;"></li>
                         <li class="m-0">
-                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/swe_career_guide" style="border-radius: 0px 0px 0px 15px;">SWE Career Guide</a>
+                            <a class="dropdown-item py-3 sm-win-web-mob-nav m-0" href="/swe_career_guide/Education/Getting_Started" style="border-radius: 0px 0px 0px 15px;">SWE Career Guide</a>
                         </li>
                     </ul>
 
@@ -216,7 +216,7 @@
                         <a href="/search_solutions/None/0">Coding Solutions</a>
                     </p>
                     <p>
-                        <a href="/swe_career_guide">SWE Career Guide</a>
+                        <a href="/swe_career_guide/Education/Getting_Started">SWE Career Guide</a>
                     </p>
                     <p class="pt-5" style="color: black">
                         © 2024 Copyright:
