--- a/templates/pages/career_guide/swe_career_guide.html
+++ b/templates/pages/career_guide/swe_career_guide.html
@@ -29,20 +29,20 @@
                 <a href="#homeSubmenu" data-toggle="collapse" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">1. Education</a>
                 <ul class="collapse list-unstyled" id="homeSubmenu">
                     <li>
-                        <a href="#">Getting Started</a>
+                        <a href="/swe_career_guide/Education/Getting_Started">Getting Started</a>
                     </li>
                     <li>
-                        <a href="#">A. Community College Certification</a>
+                        <a href="/swe_career_guide/Education/Community_College_Certification">A. Community College Certification</a>
                     </li>
                     <li>
-                        <a href="#">B. Nonprofit Boot Camp</a>
+                        <a href="/swe_career_guide/Education/Nonprofit_Boot_Camp">B. Nonprofit Boot Camp</a>
                     </li>
                     <li>
-                        <a href="#">C. Coding Bootcamp</a>
+                        <a href="/swe_career_guide/Education/Coding_Bootcamp">C. Coding Bootcamp</a>
                     </li>
                     <!-- High School diploma -> College Certification -->
                     <li>
-                        <a href="#">D. High School Diploma >>> College Certification</a>
+                        <a href="/swe_career_guide/Education/High_School_Diploma_>>>_College_Certification">D. High School Diploma >>> College Certification</a>
                     </li>
                 </ul>
             </li>
