--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -36,7 +36,7 @@
                                 <b>3.</b> Seek assistance in job placement through programs like...
                             </p>
                             <p class="p-3"><i>With these steps accomplished, you'll be well-prepared to pursue your desired Software Engineer position.</i></p>
-                            <a href="/swe_career_guide" type="button" class="btn btn-outline-dark" style="float: right;">Guide</a>
+                            <a href="/swe_career_guide/Education/Getting_Started" type="button" class="btn btn-outline-dark" style="float: right;">Comprehensive Step-by-Step Guide</a>
                         </div>
 
                         
