ed📚 + tech interview new UI/UX✨ done

--- a/templates/pages/career_guide/guide.html
+++ b/templates/pages/career_guide/guide.html
@@ -96,7 +96,7 @@
                             {% endif %}
 
                         {% else %}
-                            {% if p.with_link %}
+                            {% if p.link %}
 
                             <ol type="{{p.list[1]}}"> 
                                 {% for data in p.content %}
