--- a/templates/pages/career_guide/swe_career_guide.html
+++ b/templates/pages/career_guide/swe_career_guide.html
@@ -53,23 +53,23 @@
                 <a href="#pageSubmenu" data-toggle="collapse" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">2. Technical Interview</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu">
                     <li>
-                        <a href="#">Important</a>
+                        <a href="/swe_career_guide/Technical_Interview/Getting_Started">Getting Started</a>
                     </li>
                     <li>
-                        <a href="#">A. Structy</a>
+                        <a href="/swe_career_guide/Technical_Interview/Structy">A. Structy</a>
                     </li>
                     <li>
-                        <a href="#">B. AlgoExpert</a>
+                        <a href="/swe_career_guide/Technical_Interview/AlgoExpert">B. AlgoExpert</a>
                     </li>
                     <li>
-                        <a href="#">C. Coderbyte</a>
+                        <a href="/swe_career_guide/Technical_Interview/Coderbyte">C. Coderbyte</a>
                     </li>
                     <!-- High School diploma -> College Certification -->
                     <li>
-                        <a href="#">D. Crack The Coding Interview</a>
+                        <a href="/swe_career_guide/Technical_Interview/Crack_The_Coding_Interview">D. Crack The Coding Interview</a>
                     </li>
                     <li>
-                        <a href="#">E. Coding Challenges</a>
+                        <a href="/swe_career_guide/Technical_Interview/Coding_Challenges">E. Coding Challenges</a>
                     </li>
                 </ul>
             </li>
@@ -77,7 +77,7 @@
                 <a href="#pageSubmenu2" data-toggle="collapse" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">3. Job Search</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu2">
                     <li>
-                        <a href="#">Important</a>
+                        <a href="#">Getting Started</a>
                     </li>
                     <li>
                         <a href="#">A. Work It Daily</a>
