job search🔎 sec ✅started

--- a/templates/pages/career_guide/swe_career_guide.html
+++ b/templates/pages/career_guide/swe_career_guide.html
@@ -77,20 +77,32 @@
                 <a href="#pageSubmenu2" data-toggle="collapse" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">3. Job Search</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu2">
                     <li>
-                        <a href="#">Getting Started</a>
+                        <a href="/swe_career_guide/Job_Search/Getting_Started">Getting Started</a>
                     </li>
                     <li>
-                        <a href="#">A. Work It Daily</a>
+                        <a href="/swe_career_guide/Job_Search/Work It Daily">A. Work It Daily</a>
                     </li>
                     <li>
-                        <a href="#">B. Pathrise</a>
+                        <a href="/swe_career_guide/Job_Search/Pathrise">B. Tangerine Search</a>
                     </li>
                     <li>
-                        <a href="#">C. HatchWays</a>
+                        <a href="/swe_career_guide/Job_Search/Pathrise">C. Pathrise</a>
+                    </li>
+
+                    <!-- 
+
+                        tangerine-search
+
+                        https://tangerine-search.ck.page/products/from-resume-refresh-to-interview-ready-
+
+                     -->
+
+                    <!-- <li>
+                        <a href="/swe_career_guide/Job_Search/">C. HatchWays</a>
                     </li>
                     <li>
-                        <a href="#">D. Triple Byte</a>
-                    </li>
+                        <a href="/swe_career_guide/Job_Search/">D. Triple Byte</a>
+                    </li> -->
                 </ul>
         </ul>
 
