+more Job Search content

--- a/templates/pages/career_guide/swe_career_guide.html
+++ b/templates/pages/career_guide/swe_career_guide.html
@@ -80,10 +80,10 @@
                         <a href="/swe_career_guide/Job_Search/Getting_Started">Getting Started</a>
                     </li>
                     <li>
-                        <a href="/swe_career_guide/Job_Search/Work It Daily">A. Work It Daily</a>
+                        <a href="/swe_career_guide/Job_Search/Work_It_Daily">A. Work It Daily</a>
                     </li>
                     <li>
-                        <a href="/swe_career_guide/Job_Search/Pathrise">B. Tangerine Search</a>
+                        <a href="/swe_career_guide/Job_Search/Tangerine_Search">B. Tangerine Search</a>
                     </li>
                     <li>
                         <a href="/swe_career_guide/Job_Search/Pathrise">C. Pathrise</a>
