--- a/templates/pages/career_guide/swe_career_guide.html
+++ b/templates/pages/career_guide/swe_career_guide.html
@@ -25,7 +25,7 @@
         <ul class="list-unstyled components">
             <p>3 Steps</p>
             
-            <li class="active">
+            <li class="" id="education">
                 <a href="#homeSubmenu" data-toggle="collapse" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">1. Education</a>
                 <ul class="collapse list-unstyled" id="homeSubmenu">
                     <li>
@@ -49,7 +49,7 @@
             <!-- <li>
                 <a href="#">About</a>
             </li> -->
-            <li>
+            <li id="technical-interview">
                 <a href="#pageSubmenu" data-toggle="collapse" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">2. Technical Interview</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu">
                     <li>
@@ -73,7 +73,7 @@
                     </li>
                 </ul>
             </li>
-            <li>
+            <li id="job-search">
                 <a href="#pageSubmenu2" data-toggle="collapse" data-bs-toggle="collapse" aria-expanded="false" class="dropdown-toggle">3. Job Search</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu2">
                     <li>
@@ -159,6 +159,22 @@
                     var sidebar = document.getElementById('sidebar');
                     sidebar.classList.toggle('active');
                 });
+            });
+
+            // Add event listener to the URL
+            document.addEventListener('DOMContentLoaded', function () {
+                var url = window.location.href;
+                // if URL has Education make id education active
+                if (url.includes('Education')) {
+                    document.getElementById('education').classList.add('active');
+                    document.getElementById('homeSubmenu').classList.add('show');
+                }else if(url.includes('Technical_Interview')){
+                    document.getElementById('technical-interview').classList.add('active');
+                    document.getElementById('pageSubmenu').classList.add('show');
+                }else if(url.includes('Job_Search')){
+                    document.getElementById('job-search').classList.add('active');
+                    document.getElementById('pageSubmenu2').classList.add('show');
+                }
             });
 
             // $(document).ready(function () {
