--- a/templates/pages/career_guide/swe_career_guide.html
+++ b/templates/pages/career_guide/swe_career_guide.html
@@ -42,7 +42,7 @@
                     </li>
                     <!-- High School diploma -> College Certification -->
                     <li>
-                        <a href="/swe_career_guide/Education/High_School_Diploma_to_College_Certification">D. High School Diploma >>> College Certification</a>
+                        <a href="/swe_career_guide/Education/High_School_Diploma_to_College_Certification">D. High School Diploma to College Certification</a>
                     </li>
                 </ul>
             </li>
